test/spec_vectors/memory64/ok/module_4.wat
(module definition (memory i64 281474976710656))