test/spec_vectors/memory64/fail/module_20.wat
(module (memory i64 0 281474976710657))